--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/hypr-paint-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vite-project</title>
+    <title>HyperPaint</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <canvas id="maincanvas" width="800" height="600"></canvas>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
