Added: Basic line tool and toolbar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   </head>
   <body>
     <div id="app">
+      <div id="toolbar" class="fixed top-0 left-0 bg-gray-900 p-2 flex space-x-2 w-screen">
+        <button id="lineTool" class="text-gray-400">Line Tool</button>
+        <button id="rectTool" class="text-gray-400">Rectangle Tool</button>
+        <button id="circleTool" class="text-gray-400">Circle Tool</button>
+      </div>
       <canvas id="maincanvas" width="800" height="600"></canvas>
     </div>
     <script type="module" src="/src/main.ts"></script>
