--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>HyperPaint</title>
   </head>
   <body>
-    <div id="app">
+    <div id="app" class="bg-gray-900 h-screen w-screen overflow-hidden">
       <div id="toolbar" class="fixed top-0 left-0 bg-gray-900 p-2 flex space-x-2 w-screen">
         <button id="lineTool" class="text-gray-400">Line Tool</button>
         <button id="rectTool" class="text-gray-400">Rectangle Tool</button>
         <button id="circleTool" class="text-gray-400">Circle Tool</button>
+        <input type="color" id="colorPicker" class="ml-4" value="#000000" />
       </div>
       <canvas id="maincanvas" width="800" height="600"></canvas>
     </div>
