Updated: Changed how pixels are updated on canvas (new function not default one)

--- a/index.html
+++ b/index.html
@@ -13,32 +13,37 @@
           <img 
             src="src/assests/pencil-tool-icon.svg" 
             alt="Narzędzie Ołówek" 
-            class="w-10 h-10"
+            class="w-25 h-25"
           />
         <button id="lineTool">
           <img 
             src="src/assests/line-tool-icon.svg" 
             alt="Narzędzie Linia" 
-            class="w-10 h-10"
+            class="w-25 h-25"
           />  
         </button>
         <button id="rectTool">
           <img 
             src="src/assests/rectangle-tool-icon.svg" 
             alt="Narzędzie Prostokąt" 
-            class="w-10 h-10"
+            class="w-25 h-25"
           />  
         </button>
         <button id="circleTool">
           <img 
             src="src/assests/circle-tool-icon.svg" 
             alt="Narzędzie Koło" 
-            class="w-10 h-10"
+            class="w-25 h-25"
           />
-        </button>
+          <button id="grabTool">
+            <img 
+              src="src/assests/grab-tool-icon.svg" 
+              alt="Narzędzie Chwytak" 
+              class="w-25 h-25"/>
+          </button>
         <input type="color" id="colorPicker" class="ml-4" value="#000000" />
       </div>
-      <canvas id="maincanvas" width="800" height="600"></canvas>
+      <canvas id="maincanvas" width="1280" height="860"></canvas>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
