Added: Shape creation toolbar

--- a/index.html
+++ b/index.html
@@ -106,13 +106,19 @@
     </div>
 
     <div id="common-props" class="hidden mt-4 space-y-2">
-        <div>
-            <label class="block text-sm font-medium">Kolor</label>
-            <input type="color" id="shape-color" class="w-full h-8 p-0 border-0 rounded">
+           <div>
+                <label class="block text-sm font-medium">Kolor</label>
+                <input type="color" id="shape-color" class="w-full h-8 p-0 border-0 rounded">
+            </div>
+        
+            <button id="updateButton" class="w-full bg-blue-500 text-white p-2 rounded hover:bg-blue-600">
+                Aktualizuj
+           </button>
+        
+           <button id="createButton" class="w-full bg-green-500 text-white p-2 rounded hover:bg-green-600">
+                Utwórz
+            </button>
         </div>
-        <button id="updateButton" class="w-full bg-blue-500 text-white p-2 rounded hover:bg-blue-600">
-            Aktualizuj
-        </button>
     </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
