--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="app" class="w-screen h-screen bg-gradient-to-r from-gray-500 via-gray-600 to-gray-700
     dark:from-gray-800 dark:via-gray-900 dark:to-black
     bg-[length:400%_400%]">
-      <div id="toolbar" class="fixed top-0 left-0 bg-gray-900 p-2 flex space-x-2 w-screen">
+      <div id="toolbar" class="fixed top-0 left-0 bg-gray-900 p-2 flex space-x-2 w-screen h-30">
         <button id="pencilTool" class="bg-slate-200 hover:bg-indigo-600 dark:bg-slate-800 
   text-indigo-700 hover:text-white
     hover:rounded-xl rounded-3xl
@@ -66,11 +66,14 @@
           </button>
         <input type="color" id="colorPicker" class="ml-4" value="#000000" />
       </div>
-      <canvas id="maincanvas" width="1280" height="860"></canvas>
+      <canvas id="maincanvas" width="1280" height="860" class="mt-30"></canvas>
       <div id="fileToolbar" class="fixed bottom-0 left-0 bg-gray-900 p-2 flex space-x-2 v-screen">
         <button id="saveButton" title="Zapisz" class="text-amber-50">Zapisz</button>
         <input type="file" id="loadInput" accept=".json" style="display: none;" />
         <button id="loadButton" title="Wczytaj" class="text-amber-50">Wczytaj</button>
+        <button id="loadPPM" title="Wczytaj PPM" class="text-amber-50">Wczytaj PPM</button>
+        <input type="file" id="loadPPMInput" accept=".ppm" style="display: none;" />
+      </div>
         <div id="properties-panel" 
      class="fixed top-0 right-0 h-full w-64 bg-gray-100 p-4 shadow-lg border-l border-gray-300 transform translate-x-full transition-transform z-10">
     
