--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                 <button id="tabG" class="px-3 py-2 text-sm font-medium border-b-2 border-transparent text-gray-400 hover:text-white">G</button>
                 <button id="tabB" class="px-3 py-2 text-sm font-medium border-b-2 border-transparent text-gray-400 hover:text-white">B</button>
                 <button id="tabGray" class="px-3 py-2 text-sm font-medium border-b-2 border-transparent text-gray-400 hover:text-white">Szarość</button>
+                <button id="tabFilters" class="px-3 py-2 text-sm font-medium border-b-2 border-transparent text-gray-400 hover:text-white">Filtry</button>
             </div>
 
             <div id="contentRGB" class="space-y-3">
@@ -242,6 +243,29 @@
                     <div class="flex flex-col gap-2">
                         <button id="grayscaleAverageButton" class="bg-gray-600 hover:bg-gray-700 px-3 py-2 rounded text-sm">Średnia arytmetyczna<br><span class="text-xs text-gray-400">(R+G+B)/3</span></button>
                         <button id="grayscaleLuminanceButton" class="bg-gray-600 hover:bg-gray-700 px-3 py-2 rounded text-sm">Luminancja (ważona)<br><span class="text-xs text-gray-400">0.299R + 0.587G + 0.114B</span></button>
+                    </div>
+                </div>
+            </div>
+
+            <div id="contentFilters" class="space-y-3 hidden">
+                <div class="border border-purple-600 rounded p-2">
+                    <label class="block text-sm font-medium mb-2 text-purple-400">Filtry obrazu</label>
+                    <div class="flex flex-col gap-2">
+                        <button id="filtrWygladzajacyButton" class="bg-purple-600 hover:bg-purple-700 px-3 py-2 rounded text-sm text-left">
+                            Filtr wygładzający (uśredniający)<br><span class="text-xs text-gray-400">Kernel 3x3</span>
+                        </button>
+                        <button id="filtrMedianowyButton" class="bg-purple-600 hover:bg-purple-700 px-3 py-2 rounded text-sm text-left">
+                            Filtr medianowy<br><span class="text-xs text-gray-400">Mediana z okna 3x3</span>
+                        </button>
+                        <button id="filtrWykrywaniaKrawedziButton" class="bg-purple-600 hover:bg-purple-700 px-3 py-2 rounded text-sm text-left">
+                            Filtr wykrywania krawędzi (Sobel)<br><span class="text-xs text-gray-400">Gradient X i Y</span>
+                        </button>
+                        <button id="filtrGornoprzepustowyWyostrzajacyButton" class="bg-purple-600 hover:bg-purple-700 px-3 py-2 rounded text-sm text-left">
+                            Filtr górnoprzepustowy wyostrzający<br><span class="text-xs text-gray-400">Podkreślanie szczegółów</span>
+                        </button>
+                        <button id="filtrRozmycieGaussowskieButton" class="bg-purple-600 hover:bg-purple-700 px-3 py-2 rounded text-sm text-left">
+                            Filtr rozmycie gaussowskie<br><span class="text-xs text-gray-400">Kernel 5x5</span>
+                        </button>
                     </div>
                 </div>
             </div>
