--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <button id="bezierTool" class="bg-slate-200 hover:bg-indigo-600 dark:bg-slate-800 text-indigo-700 hover:text-white rounded-full transition-all duration-300 ease-linear cursor-pointer shadow-lg w-12 h-12 flex items-center justify-center p-0" title="Krzywa Beziera">
                 <span class="text-lg font-bold">B</span>
             </button>
+            <button id="polygonTool" class="bg-slate-200 hover:bg-indigo-600 dark:bg-slate-800 text-indigo-700 hover:text-white rounded-full transition-all duration-300 ease-linear cursor-pointer shadow-lg w-12 h-12 flex items-center justify-center p-0" title="Wielokat">
+                <span class="text-lg font-bold">P</span>
+            </button>
         </div>
 
         <div class="flex items-center gap-2 bg-slate-700 px-3 py-1 rounded-lg" id="bezierDegreeContainer">
@@ -448,6 +451,72 @@
         <button id="removeBezierPointBtn" class="w-full bg-red-500 text-white p-1 rounded hover:bg-red-600 text-sm">
             - Usun ostatni punkt
         </button>
+    </div>
+
+    <div id="polygon-props" class="hidden space-y-2">
+        <div>
+            <label class="block text-sm font-medium mb-2">Wierzcholki</label>
+            <div id="polygon-vertices-container" class="space-y-2 max-h-40 overflow-y-auto">
+            </div>
+        </div>
+        <button id="addPolygonVertexBtn" class="w-full bg-green-500 text-white p-1 rounded hover:bg-green-600 text-sm">
+            + Dodaj wierzcholek
+        </button>
+        <button id="removePolygonVertexBtn" class="w-full bg-red-500 text-white p-1 rounded hover:bg-red-600 text-sm">
+            - Usun ostatni wierzcholek
+        </button>
+
+        <hr class="border-gray-300 my-2">
+
+        <div class="border border-blue-300 rounded p-2 bg-blue-50">
+            <label class="block text-sm font-bold mb-2 text-blue-800">Przesuniecie (Translacja)</label>
+            <div class="flex space-x-2 items-center mb-1">
+                <label class="text-xs w-12">Wektor:</label>
+                <input type="number" id="translate-dx" class="w-16 p-1 border rounded text-sm" placeholder="dx" value="0">
+                <input type="number" id="translate-dy" class="w-16 p-1 border rounded text-sm" placeholder="dy" value="0">
+            </div>
+            <button id="applyTranslateBtn" class="w-full bg-blue-500 text-white p-1 rounded hover:bg-blue-600 text-sm">
+                Przesun
+            </button>
+        </div>
+
+        <div class="border border-green-300 rounded p-2 bg-green-50">
+            <label class="block text-sm font-bold mb-2 text-green-800">Obrot (Rotacja)</label>
+            <div class="flex space-x-2 items-center mb-1">
+                <label class="text-xs w-12">Punkt:</label>
+                <input type="number" id="rotate-cx" class="w-16 p-1 border rounded text-sm" placeholder="cx">
+                <input type="number" id="rotate-cy" class="w-16 p-1 border rounded text-sm" placeholder="cy">
+            </div>
+            <div class="flex space-x-2 items-center mb-1">
+                <label class="text-xs w-12">Kat (°):</label>
+                <input type="number" id="rotate-angle" class="w-full p-1 border rounded text-sm" placeholder="kat" value="45">
+            </div>
+            <button id="setRotateCenterBtn" class="w-full bg-green-400 text-white p-1 rounded hover:bg-green-500 text-sm mb-1">
+                Ustaw punkt myszka
+            </button>
+            <button id="applyRotateBtn" class="w-full bg-green-500 text-white p-1 rounded hover:bg-green-600 text-sm">
+                Obroc
+            </button>
+        </div>
+
+        <div class="border border-purple-300 rounded p-2 bg-purple-50">
+            <label class="block text-sm font-bold mb-2 text-purple-800">Skalowanie</label>
+            <div class="flex space-x-2 items-center mb-1">
+                <label class="text-xs w-12">Punkt:</label>
+                <input type="number" id="scale-cx" class="w-16 p-1 border rounded text-sm" placeholder="cx">
+                <input type="number" id="scale-cy" class="w-16 p-1 border rounded text-sm" placeholder="cy">
+            </div>
+            <div class="flex space-x-2 items-center mb-1">
+                <label class="text-xs w-12">Wsp.:</label>
+                <input type="number" id="scale-factor" class="w-full p-1 border rounded text-sm" placeholder="wspolczynnik" value="1.5" step="0.1">
+            </div>
+            <button id="setScaleCenterBtn" class="w-full bg-purple-400 text-white p-1 rounded hover:bg-purple-500 text-sm mb-1">
+                Ustaw punkt myszka
+            </button>
+            <button id="applyScaleBtn" class="w-full bg-purple-500 text-white p-1 rounded hover:bg-purple-600 text-sm">
+                Skaluj
+            </button>
+        </div>
     </div>
 
     <div id="rgb-cube-props" class="hidden space-y-3">
